Bugfix on mobile

--- a/website/assets/style/main.scss
+++ b/website/assets/style/main.scss
@@ -44,7 +44,7 @@ h2 {
 }
 
 .content {
-    width: calc(100% - #{$sidebarWidth});
+    width: 100%;
     padding: 0;
     min-height: 100vh;
     transition: all 0.3s;
